# olki-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.worker  Makefile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
contacts/: admin.py  models.py  serializers.py  test_serializers.py  test_views.py  tests.py  urls.py  views.py
contacts/management/commands/: runworker.py
contacts/migrations/: 0001_initial.py
grafana/provisioning/dashboards/: django-dashboard.json
olki_backend/: asgi.py  settings.py  tests.py  urls.py  views.py  wsgi.py
products/: admin.py  models.py  serializers.py  test_serializers.py  test_views.py  tests.py  views.py
products/migrations/: 0001_initial.py
templates/: report.html
